보험가입페이지 디자인 변경

--- a/src/app/pages/join/insurance-information/insurance-information.component.html
+++ b/src/app/pages/join/insurance-information/insurance-information.component.html
@@ -8,7 +8,8 @@
     
     <section class="image-area">
         <div class="image-box">
-            <img src="/assets/image/img.svg" alt="">
+            <!-- <img src="/assets/image/img.svg" alt=""> -->
+            <img src="/assets/image/02_360_180.gif" alt="">
         </div>
         
     </section>
@@ -33,14 +34,21 @@
                 <dd>1km당 3원 / 익월 1일 후불결제</dd>
             </li> 
         </ul>
-    
+        
+        <ul id="payment-guide-list">
+            <li>
+                월 최소 결제 금액은 100원이며, 이용내역이 없는 경우 미결제됩니다.
+            </li>    
+        </ul>
+        
+
         <ul id="guarantee-list">
             <li class="description-content">
                 <dl>
                     <img src="/assets/image/img_settlement.svg" alt="">
                 </dl>
                 <dd>
-                    <h6 class="guarantee-title">형사합의금</h6> 
+                    <h6 class="guarantee-title">형사합의금 <span class="font-weight-basic">1.5억 한도</span></h6> 
                     <small class="guarantee-sub-title">교통사고 처리지원금</small>
                 </dd>
             </li>
@@ -49,7 +57,7 @@
                     <img src="/assets/image/img_lawyer.svg" alt="">
                 </dl>
                 <dd>
-                    <h6 class="guarantee-title">변호사 선임비</h6>
+                    <h6 class="guarantee-title">변호사 선임비 <span class="font-weight-basic">3천만원 한도</span></h6>
                     <small class="guarantee-sub-title">공소제기 또는 구속 시</small>
                 </dd>
                 
@@ -59,7 +67,7 @@
                     <img src="/assets/image/img_penalty.svg" alt="">
                 </dl>
                 <dd>
-                    <h6 class="guarantee-title">벌금보상</h6>
+                    <h6 class="guarantee-title">벌금보상 <span class="font-weight-basic">3천만원 한도</span></h6>
                     <small class="guarantee-sub-title">벌금형이 판결된 경우</small>
                 </dd>
                 
@@ -381,6 +389,7 @@
             </table>
 
             <ul class="no-padding-left">
+                <li>월 최소 결제 금액은 100원이며, 이용 내역이 없는 경우 미결제됩니다.</li>
                 <li>본 상품은 직업 및 성별에 관계없이 보험료가 동일합니다. </li>
                 <li>회사가 정하는 기준에 의거 가입연령 및 직무 등에 따라 보험가입 금액이 제한되거나 가입이 불가능할 수 있습니다.</li>
                 <li>피보험자가 소유, 사용 또는 관리하는 다수의 이동통신단말기에 탑재된 앱에서 동시에 보험을 적용한 경우, 보험료가 중복 부과됩니다. 단, 보상한도는 상향됩니다.</li>
