--- a/src/app/apps/insu-request/insu-request.component.html
+++ b/src/app/apps/insu-request/insu-request.component.html
@@ -1,32 +1,37 @@
 <main>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-        <div class="container-fluid">
-          <a class="navbar-brand" [routerLink]="'.'">Responsive navbar</a>
-      
-          <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
-          <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
-            &#9776;
-          </button>
-      
-          <!-- Step 2: Add the ngbCollapse directive to the element below. -->
-          <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <!-- Step 4: Close the menu when a link is clicked. -->
-                <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Examples</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">About</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
     
-      <section class="page-header">
+  
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg  text-uppercase fixed-top" id="mainNav">
+      <div class="container">
+        <div class="title-logo" (click)="scrollToElement(firstSection)"><span style="color: #dfab01;">카카오 T </span><span class="serviceType"></span> <br class="br br-title-logo"> <span class="sub-text"></span> 운전자보험</div>
+        
+        <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold rounded"
+          type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class=" nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" (click)="scrollToElement(secondSection)">상품 내용</a>
+            </li>
+            <li class="menu-item nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" (click)="scrollToElement(thirdSection)">약관 안내</a>
+            </li>
+            <li class="menu-item nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" (click)="scrollToElement('anchorId')">자주 묻는 질문</a>
+            </li>
+            <li class="menu-item nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" (click)="scrollToElement('anchorId')">문의하기</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+      
+      
+      <header #firstSection class="page-header">
         <h1 class="page-title section-title">탄 만큼 내는 운전자보험</h1>
         <p>운전자보험 간단 설명</p>
 
@@ -34,9 +39,9 @@
             사고접수하기
         </button>
 
-      </section>
+      </header>
       
-      <section>
+      <section #secondSection>
         <h2 class="section-title">상품내용</h2>
 
 
@@ -66,15 +71,15 @@
         </table>
       </section>
 
-      <section>
+      <section #thirdSection>
         <h2 class="section-title">약관안내</h2>
       </section>
 
-      <section>
+      <section #fourthSection>
         <h2 class="section-title">자주 묻는 질문</h2>
       </section>
 
-      <section>
+      <section #fifthSection>
         <h2 class="section-title">문의하기</h2>
       </section>
 
