--- a/src/app/apps/insu-request/insu-request.component.scss
+++ b/src/app/apps/insu-request/insu-request.component.scss
@@ -11,3 +11,11 @@ section{
 .section-title{
     text-align: center;
 }
+
+header{
+    margin-top: 100px;
+}
+
+.page-header{
+    height: 1000px;
+}
