--- a/src/app/pages/join/confirm/confirm.component.scss
+++ b/src/app/pages/join/confirm/confirm.component.scss
@@ -32,19 +32,22 @@ header, section {
 }
 
 
-.contract-information-area,.insured-information-area{
+// #contract-information-area,#insured-information-area{
+.information-area {
     padding: 20px;
 }
 
 
-.contract-information-area h3,.insured-information-area h3{
+// #contract-information-area h3,#insured-information-area h3{
+.information-area h3{
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 14px;
     padding-top: 16px;
 }
 
-.contract-information-area ul, .insured-information-area ul{
+// #contract-information-area ul, #insured-information-area ul{
+.information-area ul{
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
