--- a/src/app/pages/join/confirm/confirm.component.html
+++ b/src/app/pages/join/confirm/confirm.component.html
@@ -41,7 +41,8 @@
             </li>
             <li class="information-content">
                 <dl>주민등록번호</dl>
-                <dd>{{payload.driverSocialNumber | hiddenSocialNumber}}</dd>
+                <!-- <dd>{{payload.driverSocialNumberFirst}} - {{payload.driverSocialNumberSecond}}</dd> -->
+                <dd>{{payload.driverSocialNumberFirst}} - •••••••</dd>
             </li>
             <li class="information-content">
                 <dl>휴대폰</dl>
