--- a/src/app/pages/join/confirm/confirm.component.html
+++ b/src/app/pages/join/confirm/confirm.component.html
@@ -82,8 +82,8 @@
     </section>
 
     <div class="sticky-button-area">
-        <!-- <button class="btn btn-primary" id="join-button" (click)="openKakaoPaymentApp()">가입완료</button> -->
-            <button class="btn btn-primary" id="join-button" (click)="contract()">가입 완료</button>
+        <button class="btn btn-primary" id="join-button" (click)="openKakaoPaymentApp()">가입완료</button>
+            <!-- <button class="btn btn-primary" id="join-button" (click)="contract()">가입 완료</button> -->
             <!-- <button class="btn btn-primary" id="join-button" (click)="open(contractFailModal,'my-class-contract-fail-modal')">가입 완료</button> -->
             <!-- <button class="btn btn-primary" id="join-button" (click)="open(contractSuccessModal,'my-class-contract-success-modal')">가입 완료</button> -->
     </div>
