--- a/src/app/pages/join/insurance-information/insurance-information.component.scss
+++ b/src/app/pages/join/insurance-information/insurance-information.component.scss
@@ -1,6 +1,9 @@
 .insurance-information-container{
-    padding: 0px 20px 0px 20px;
+    // padding: 0px 20px 0px 20px;
     
+}
+.padding-side{
+    padding: 0px 20px 0px 20px;
 }
 
 .title-area{
@@ -48,9 +51,12 @@
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
-            color: rgba(38, 45, 57, 0.52);
+            // color: rgba(38, 45, 57, 0.52);
             // color: #262D39;
             margin-bottom: 0;
+        }
+        dl.font-color-gray{
+            color: rgba(38, 45, 57, 0.52);
         }
         dd{
             font-family: 'Roboto';
@@ -176,6 +182,9 @@
         font-weight: 400;
         color: rgba(38, 45, 57, 0.52);
     }
+    .color-blue{
+        color: #3581FF;
+    }
 }
 
 .sticky-button-area{
@@ -221,6 +230,9 @@
 
 .modal-body{
     padding-top: 0;
+    a{
+        outline: none;
+    }
     h3.modal-title{
         font-size: 24px;
         font-weight: 700;
@@ -307,6 +319,22 @@
         }
     }
 
+
+    #SIMG-info-table{
+        min-width: 320px;
+        width: 100%;
+        border: none;
+        tr{
+            height: 30px;
+        }
+        td{
+            vertical-align: top;
+        }
+        .td-title{
+            min-width: 25px;
+            width: 80px;
+        }
+    }
     .content{
         font-size:18px;
         font-weight: 700;
