--- a/src/app/pages/join/insurance-information/insurance-information.component.html
+++ b/src/app/pages/join/insurance-information/insurance-information.component.html
@@ -9,8 +9,8 @@
 
     <section class="image-area">
         <div class="image-box">
-            <!-- <img src="/assets/image/img.svg" alt=""> -->
-            <img src="/assets/image/02_360x180.gif" alt="">
+            <!-- <img src="/assets/image/02_360x180.gif" alt=""> -->
+            <img style="width: 360px;" src="/assets/image/02_720x360.gif" alt="">
         </div>
         
     </section>
